# aws-es-snapshot-helper

./: .gitignore  README.md  pyproject.toml  template.yaml
snapshot_helper/: app.py  requirements.txt
